[gd_scene load_steps=3 format=3 uid="uid://o2pvq4u3r4ou"]

[ext_resource type="Script" path="res://scenes/level1/picup_object/home_position.gd" id="1_3biuj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7aq6o"]
size = Vector2(59, 49)

[node name="HomePosition" type="Area2D"]
collision_mask = 4
script = ExtResource("1_3biuj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(29, 24)
shape = SubResource("RectangleShape2D_7aq6o")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -1.0
offset_top = -1.0
offset_right = 59.0
offset_bottom = 50.0
color = Color(0.254331, 0.589812, 0.327141, 0.294118)
metadata/_edit_use_anchors_ = true

[node name="HomeName" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 9.0
offset_top = 12.0
offset_right = 49.0
offset_bottom = 36.0
text = "A"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
